# reader

./: .gitignore  AGENT.md  README.md  pyproject.toml  todo-human.md  todo.md
memory_cli/: AGENT.md  Cargo.toml  README.md  TODO.md
memory_cli/docs/: contracts.md  design.md
memory_cli/examples/: cluster_config.json  embed_config.json  fresh_paper_payload.json  get_best_run_output.json
memory_cli/schemas/: schema.sql
memory_cli/src/: cli.rs  commands.rs  contracts.rs  db.rs  lib.rs
memory_cli/src/cli/: args.rs
memory_cli/src/commands/: fresh_paper.rs  get_best_run.rs  validation.rs
memory_cli/src/contracts/: fresh_paper.rs  get_best_run.rs
memory_cli/src/db/: migrate.rs  store.rs
reader/: ai_paper_system_design.md  cluster.py  code_sample.py  embed.py  fetch.py  papers_report.json  papers_report.txt  pipeline.py  pyproject.toml  refactor-reader  todo.md
reader/algo_lib/: __init__.py
reader/algo_lib/embedding/: __init__.py
reader/configs/: reader.yaml
reader/notes/: design_notes.md
reader/scripts/: embed_cluster_test.py  log_embed_1_13  ocr_vlm_dom_comp.py
reader/src/: best_clustering_reports_month=2025-01.md  fetch.py  pipeline.py  run.sh
reader/src/algo_lib/: typing.py
reader/src/algo_lib/clustering/: __init__.py  kmeans.py  metrics.py  ordering.py  reporting.py  selection.py
reader/src/algo_lib/embedding/: embedder.py
reader/src/reader/: __init__.py  __main__.py  cli.py  config.py  models.py
reader/src/reader/adapters/: __init__.py  hf.py  llm.py  memo.py
reader/src/reader/pipelines/: __init__.py  monthly.py
reader/src/reader/pipelines/report/: __init__.py  report.py
(+51 files in other folders)
