[package]
name = "memo-cli"
version = "0.1.0"
edition = "2021"
description = "Memory CLI for Reader (SQLite-backed, safe command surface)"
license = "MIT"

[dependencies]
anyhow = "1.0.95"
thiserror = "1.0.69"
clap = { version = "4.5.54", features = ["derive", "env"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
rusqlite = { version = "0.32.1", features = ["bundled"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.11.0", features = ["v4", "serde"] }
base64 = "0.22.1"
hex = "0.4.3"
