[project]
name = "news-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "sentence-transformers>=2.0.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "httpx>=0.24.0",
    "umap-learn>=0.5.5",
    "numba>=0.59.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    
]
